<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.add_story.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_add_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="56dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_story"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_add_photo_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/camera"
            app:layout_constraintEnd_toStartOf="@id/btn_add_photo_gallery"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/iv_add_story"
            app:layout_constraintTop_toBottomOf="@+id/iv_add_story" />

        <Button
            android:id="@+id/btn_add_photo_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/gallery"
            app:layout_constraintEnd_toEndOf="@id/iv_add_story"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/btn_add_photo_camera"
            app:layout_constraintTop_toTopOf="@id/btn_add_photo_camera" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/el_add_description"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:gravity="top"
            android:paddingHorizontal="56dp"
            app:layout_constraintTop_toBottomOf="@id/btn_add_photo_camera">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:hint="@string/description" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/el_add_description"
            app:layout_constraintStart_toStartOf="@id/btn_add_photo_camera"
            app:layout_constraintEnd_toEndOf="@id/btn_add_photo_gallery"
            android:layout_marginTop="8dp"
            android:text="@string/add_location_information"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/upload"
            app:layout_constraintEnd_toEndOf="@id/iv_add_story"
            app:layout_constraintStart_toStartOf="@id/iv_add_story"
            app:layout_constraintTop_toBottomOf="@id/checkbox"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_add_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>