<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.register.RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_person"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/il_register_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_register_name"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.nurhidayaatt.storyapp.presentation.custom_view.TextInputLayout
        android:id="@+id/il_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/il_register_password">

        <com.nurhidayaatt.storyapp.presentation.custom_view.TextInputEditText
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:hint="@string/email"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress" />

    </com.nurhidayaatt.storyapp.presentation.custom_view.TextInputLayout>

    <com.nurhidayaatt.storyapp.presentation.custom_view.TextInputLayout
        android:id="@+id/il_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.nurhidayaatt.storyapp.presentation.custom_view.TextInputEditText
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:layout_height="match_parent"
            android:inputType="textPassword" />

    </com.nurhidayaatt.storyapp.presentation.custom_view.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/il_register_password"
        android:text="@string/register"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>